# csc299-project

./: README.md
final-project/: .gitignore  README.md  SUMMARY.md  pyproject.toml  video.txt
final-project/src/mindquest/: __init__.py
final-project/src/mindquest.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
tasks1/: README.md  tasks.json  tasks.py
tasks2/: README.md  tasks.db
tasks3/: pyproject.toml  test_tasks.db
tasks3/src/tasks3/: __init__.py
tasks3/src/tasks3.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt
tasks3/tests/: test_inc.py  test_tasks.py
tasks4/: pyproject.toml
tasks4/src/tasks4/: __init__.py
tasks4/src/tasks4.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
tasks5/: pyproject.toml
tasks5/specs/: spec.md
tasks5/specs/001-mindquest/: spec.md
tasks5/src/tasks5/: __init__.py
