[build-system]
requires = ["setuptools >= 61.0"]
build-backend = "setuptools.build_meta"
[project]
name = "tasks3"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = []
[project.scripts]
tasks3 = "tasks3:main"
[dependency-groups]
dev = [
    "pytest>=8.4.2",
]
[tool.pytest.ini_options]
testpaths = [
    "tests",
]
pythonpath = [
    "src"
]
[tool.setuptools.packages.find]
where = ["src"]
